# arm64-v8a-nsd

./: .gitignore  README.md  if_else_10.html  pyproject.toml  test_prologue.nassi.html  test_prologue.s  todo1.md  todo9.04.26.md  tour.html
demo/: demo_arm64v8a.asm  demo_report.html
hellosilicon/: index.html
hellosilicon/Chapter 01/: HelloWorld.nassi.html
hellosilicon/Chapter 02/: addexamp1.nassi.html  addexamp2.nassi.html  addexamps.nassi.html  codesnippets.nassi.html  movexamps.nassi.html
hellosilicon/Chapter 03/: HelloWorld.nassi.html
hellosilicon/Chapter 04/: case.nassi.html  codesnippets.nassi.html  printdword.nassi.html
hellosilicon/Chapter 05/: codesnippets.nassi.html  upper.nassi.html
hellosilicon/Chapter 06/: codesnippets.nassi.html  main.nassi.html  mainmacro.nassi.html  upper.nassi.html  uppermacro.nassi.html
hellosilicon/Chapter 07/: fileio.nassi.html  main.nassi.html  upper.nassi.html
hellosilicon/Chapter 09/: addexamp2.nassi.html  debug.nassi.html  test.nassi.html  upper.nassi.html
hellosilicon/Chapter 11/: debug.nassi.html  divexamp.nassi.html  matrixmult.nassi.html  mulexamp.nassi.html
hellosilicon/Chapter 12/: codesnippets.nassi.html  debug.nassi.html  distance.nassi.html  fpcomp.nassi.html  main.nassi.html  maincomp.nassi.html
hellosilicon/Chapter 13/: distance.nassi.html  main.nassi.html  matrixmultneon.nassi.html
hellosilicon/Chapter 14/: main.nassi.html  upper.nassi.html  upper2.nassi.html  (+2 more)
tests/: test_domain_model.py  test_instruction_set.py  test_nassi_diagrams.py  test_parse_use_cases.py  test_tokenizer.py
(+28 files in other folders)
